[package]
name = "sili-dota-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
chrono = "0.4.38"
frankenstein = { version = "0.30.8", default-features = false, features = ["async-http-client"] }
rand = "0.8.5"
serde = "1.0.200"
serde_json = "1.0.116"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
